attempting to get a psql client

--- a/pgcrud/src/main/resources/application.properties
+++ b/pgcrud/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 quarkus.hibernate-orm.database.generation=update
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/burr
-quarkus.datasource.username=burr
-quarkus.datasource.password=burr
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/mydatabase
+quarkus.datasource.username=myuser
+quarkus.datasource.password=mypassword
 quarkus.package.type=uber-jar
+
+
+# quarkus.hibernate-orm.database.generation=update
+# quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/burr
+# quarkus.datasource.username=burr
+# quarkus.datasource.password=burr
+# quarkus.package.type=uber-jar
